--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.0
-  hooks_riverpod: ^2.1.1
+  hooks_riverpod: ^2.1.3
+  riverpod_annotation: ^1.1.1
 
 dev_dependencies:
+  build_runner:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   pedantic_mono: ^1.21.1
+  riverpod_generator: ^1.1.1
+  custom_lint:
+  riverpod_lint:
 
 flutter:
   uses-material-design: true
