--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
+  audioplayers: ^3.0.1
   bordered_text: ^2.0.0
   cupertino_icons: ^1.0.2
   flutter:
@@ -17,14 +18,14 @@ dependencies:
   riverpod_annotation: ^1.1.1
 
 dev_dependencies:
-  build_runner:
+  build_runner: null
+  custom_lint: null
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   pedantic_mono: ^1.21.1
   riverpod_generator: ^1.1.1
-  custom_lint:
-  riverpod_lint:
+  riverpod_lint: null
 
 flutter:
   uses-material-design: true
