--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,14 @@ environment:
   sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
-  audioplayers: ^3.0.1
   bordered_text: ^2.0.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.1.3
+  just_audio: ^0.9.31
+  just_audio_windows: ^0.2.0
   riverpod_annotation: ^1.1.1
 
 dev_dependencies:
