--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.0
+  flutter_launcher_icons: ^0.11.0
   hooks_riverpod: ^2.1.3
   just_audio: ^0.9.31
   just_audio_windows: ^0.2.0
@@ -41,3 +42,18 @@ flutter:
       fonts:
         - asset: assets/calibri.ttf
           weight: 400
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/ysfh.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    background_color: "#4e54c8"
+    theme_color: "#4e54c8"
+  windows:
+    generate: true
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
