--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       ######## SETUP ########
@@ -38,6 +38,15 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+
+      - uses: maxim-lobanov/setup-xcode@v1
+        if: matrix.os == 'macos-latest'
+        with:
+          xcode-version: latest-stable
+
+      - name: Show Xcode version
+        if: matrix.os == 'macos-latest'
+        run: xcodebuild -version
 
       # https://github.com/kuhnroyal/flutter-fvm-config-action
       - name: Fetch flutter config
@@ -73,10 +82,21 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: flutter build windows --release
 
+      - name: Build linux
+        if: matrix.os == 'ubuntu-latest'
+        run: flutter build linux --release
+
       - name: Build web
         if: matrix.os == 'ubuntu-latest'
-        run: flutter build web --release --base-href /${{ env.REPOSITORY }}/
+        run: flutter build web --release --web-renderer html --base-href /${{ env.REPOSITORY }}/
 
+      - name: Build macOS
+        if: matrix.os == 'macos-latest'
+        run: |
+          flutter build macos --release
+          mkdir -p Payload
+          mv ./build/macos/Build/Products/Release/ysfh_final.app  ysfh_final.app
+          zip -ry ysfh_final.app.zip ysfh_final.app
 
       ######## Upload ########
       - name: Upload Windows artifact
@@ -85,6 +105,13 @@ jobs:
         with:
           name: release-windows
           path: build/windows/runner/Release/
+
+      - name: Upload Linux artifact
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: release-linux
+          path: build/linux/
 
       - name: Upload Web artifact
         if: matrix.os == 'ubuntu-latest'
@@ -96,4 +123,12 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         id: deployment
         uses: actions/deploy-pages@v1
+
+      - name: Upload macOS artifact
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v1.0.0
+        with:
+          name: release-macOS
+          path: YSFH_Final.app
+
 
