--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ysfh_final",
-    "short_name": "ysfh_final",
+    "name": "sharp_sf12_projection_mapping",
+    "short_name": "sharp_sf12_projection_mapping",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#4e54c8",
