--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.yumnumm.ysfh_final">
+    package="net.yumnumm.sharp_sf12_projection_mapping">
    <application
-        android:label="ysfh_final"
+        android:label="sharp_sf12_projection_mapping"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
