--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Build web
         if: matrix.os == 'ubuntu-latest'
-        run: flutter build web --release --web-renderer html --base-href /${{ env.REPOSITORY }}/
+        run: flutter build web --release --web-renderer html --base-href /
 
       - name: Build macOS
         if: matrix.os == 'macos-latest'
