--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   just_audio: ^0.9.31
   just_audio_windows: ^0.2.0
   riverpod_annotation: ^1.1.1
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   build_runner: ^2.3.3
